# litemon

./: Cargo.toml  README.md
src/: cli.rs  error.rs  main.rs
src/monitor/: cpu.rs  disk.rs  gpu.rs  memory.rs  mod.rs  network.rs
src/ui/: mod.rs
