[package]
name = "litemon"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A lightweight system resource monitor written in Rust"
license = "MIT"
readme = "README.md"
repository = "https://github.com/yourusername/litemon"
keywords = ["monitoring", "system", "resources", "cli", "performance"]
categories = ["command-line-utilities", "monitoring"]

[dependencies]
sysinfo = "0.29"           # 系统信息收集
tokio = { version = "1.32", features = ["full"] }  # 异步运行时
crossterm = "0.27"         # 终端控制
ratatui = "0.24"          # TUI 界面
anyhow = "1.0"            # 错误处理
thiserror = "1.0"         # 错误定义
clap = { version = "4.4", features = ["derive"] }  # 命令行参数解析
